on to the gdp body

--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -369,7 +369,6 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 EDIT THIS DOWN AND BE CLEAR ON THE MOTIVATION IN TERMS OF AGENCY AND BARRIERS TO PARTICPATION -
 THIS WAS MOVED HERE -  DOES IT REALLY LIVE HERE?
 
-
 The process of understanding game structure did not emerge completely unpromted, itw as inspired by previous work inspired by reseaarch from IOPlay, GSM, etc.
 
 
@@ -426,6 +425,7 @@ Exchanges like this allow the propagation of GDPs. The process of playing a game
 **New GDPs emerged from existing patterns through peer activity during playtesting**
 
 In addition to the propagation of main game design patterns, sub patterns and related design concepts emerged organically from the community. The concept of safe zone in the game of Ch and Pa arrived as a direct result of after adding a moving enemies GDP, the extensive use of that pattern dominates the game challenge to such an extent that it is essential for players to quickly identify and use 'safe zones'.
+DEVELOP
 
 <!-- Playtesting also helped propogate emerging practices. For example, after testing Mi's game In the example above after comments on the jump speed Fi continues.
 
@@ -438,7 +438,6 @@ In addition to the propagation of main game design patterns, sub patterns and re
 
 While Fi has only just been introduced to the ability to "cramp". He is happy and able to share this useful tool with Mi. Theme -->
 
-NOTE - DELETED INFORMAL
 
 ### GDPs facilitate the use of wider funds of knowledge
 
@@ -481,22 +480,36 @@ Te adopts with this suggestion readily once he understands Da's suggestion. He t
     Da: and see what happens?
     Mick: and see what happens.
 
-<!--
-Te is implicit in the use of is process, saying "I was thinking can we make like a pacman game kind of thing".
-Da is more explicit naming the shift of perspective but also implying
-Mick takes this to a different level by making reference to a key change of code that would be involved.
-NOTE - LINK THIS TO LOA -
---> –
 
-Da expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games). This decision can be triangulated with interview data from Da on the motivation behind his involvement in volunteering at Coder Dojos.  
+
+
+LOA FROM COMPUTING PEDAGOGY RELEVANT HERE - WHERE ELSE ARE THEY EXPLORED?
+
+Da expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
+
+Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Da is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
+
+The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Da on the motivation behind his involvement in volunteering at Coder Dojos.  
+
+PERHAPS DROP THIS QUOTE OR WORK OUT HOW TO BETTER INTEGRATE IT?
 
     Honestly, it's just it's just my hobby and I love it is the main reason. In fact, it's probably the only reason. If I can, if I can persuade / cajole / trick my kids into being involved at the same time, then that's even better. Personally, I think that's about it. I've always been interested in computers. I love, I love, I love programming. I'm no good at pencils and pens drawing or anything like that. But writing software is the closest I get to a creative outlet. So I just love doing that.  
 
-Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Da is also aware of potential challenges of straying too far from the template. He does not want to "mess things up". This tension has a parallel to a professional practice of "forking" code-bases in open-source code communities. The practice of forking can involve taking a code base in a new direction and the benefits of adaption may be out-weighed by disadvantages including the friction involved in splitting an existing community and duplication of effort. The parent checking with a Mick a guiding community member about the advantages and disadvantages of a major fork in the code structure mirrors this professional tension.
+Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Da is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
+
+
+This tension has a parallel to a professional practice of "forking" code-bases in open-source code communities. The practice of forking can involve taking a code base in a new direction and the benefits of adaption may be out-weighed by disadvantages including the friction involved in splitting an existing community and duplication of effort. The parent checking with a Mick a guiding community member about the advantages and disadvantages of a major fork in the code structure mirrors this professional tension.
+
+This example shows that while the use of GDP can help support choices within a frame, there is also the ability to break out of that restriction and keep some of the benefits of the shared code base.
 
 My own positive response to their suggestion was driven partly from knowledge of Da's cultural background a both a professional coding and a volunteer supporting children's coding programmes. While simultaneously checking with other groups that they use the starting template as a base, to avoid overload as previously discussed in design decisions, I encourage this pair to see what happens as a potential learning opportunity. I am conscious that the change of movement may open up different possibilities for new game patterns that this pair may be able to solve. This outweighs the possibility that the pair will get bogged down in complex code problems or structures which may be beyond the capacity of the young person. After all even if they encounter father must solve, the apprentice does not need to understand everything in order to benefit from observing the master at work.
 
-Summary / Other examples:
+**Summary / Other examples:**
+Thus in this xample the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspecive of coding as a creative challenge to the activity.
+
+Other families? examples with GDDP.
+
+A wider exploration of use of FOK in the programme reated to art and narrative is explored in chapter six.
 
 
 <!--
@@ -509,7 +522,7 @@ Article on intangibility of game feel.
 
 **The process of choice, use of documentation to support implementation and testing pivots on the design pattern and its behaviour.**
 
-#### GDPs help learners navigation acting as a framework for code examples and step-by-step tutorials
+#### GDPs offer the potential to assist project navigation, acting as a framework for code examples and step-by-step tutorials
 
 <!-- #### Use of simple code examples which demonstrate the pattern in isolation -->
 <!--NOTE DEVELOP THIS EXAMPLE - RELATE TO PRACTICE OF CODE PATCHING (EXPLORED IN PREVIOUS CHAPTER) -->
@@ -517,7 +530,7 @@ Article on intangibility of game feel.
 
 NOTE - In the most straight forward way this is driven by a design decision to base supporting resources around GDPs,
 
-The following example outlines the process of Te finding a GDP to implement and adding it to his game.  
+The vignette in chapter four outlined the process of Toby finding a GDP to implement and adding it to his game.  
 Insert table from https://docs.google.com/document/d/1fYuwJe4GbbGtZQttIz1mP1wYNPAwaPErr7BNjmbRmBM/edit#
 
 The timings of the process of patching the code show that the learner is hesitant in the process. He checks the code and then checks the game output to test that the code creates the desired behaviour. Once this is verified he progresses to copy and paste the code from the create function of the sample code to the create function of his own source code.
