ADDING GREEN / PINK NOTES

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1157,15 +1157,20 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict due to lack of relevant technical support
 
-**Nature of conflict - Frustrating delays - Not enough support from facilitator/s:  especially tech help - no dedicated documents, exiting docs not learner focused, coding process frustrating**
+**Nature of conflict**
 
+When game making was underway there were delays when participant knew what they wanted to add to the game but were not clear how to do it. Although I could work with people directly to help them, my limited time with each participant or pair lead to frustrations.  The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
 
-A similar conflict in the overall activity system was the inability for participants progress due to lack of game and coding practices. A key aspect of the conflict involved adult participants being aware of the limited time that I could give each group and thus not calling for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+Within AT termniology, these supporting documentation can be seen as a form of secondary stimulation. Double stimulation can be summarised as input
+The work of Sannino, explored this outside of a lab setting in education in a relatively informal setting.
+EXPAND THIS.
 
 To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
 
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
+
+I wavered between the use of a technical variable name or one more closely linked to the behaviour in the game. For example, I trialled replacing velocity_x and y with playerMoveSpeed and playerJumpSpeed. I returned to velocity x and y as they are important concepts in physics and wider science, here prioritising the more abstract representation based on experiences of participants not getting overwhelmed or stuck on this use of language, quickly forming habits to alter them. I evaluated that more is gained than lost in this design choice.
 
 <!--
 ![](./Pictures/quickstart_phaser_1.png){width=50%} -->
@@ -1191,9 +1196,11 @@ In P1, I had encouraged the use of existing resources via google searches and se
 
 On several occasions in P1 I observed participants struggling when faced with code examples illustrating a desired feature but within a different structure of project. The competency to overlook the concrete differences in code structure to abstract the principles away and then apply those principles to the existing structure of their code project seemed too ambitious for this group of novices.
 
-Initially, I responded by creating one off documents with the relevant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory.
+Initially, I responded by creating one off documents with the relevant code which needed to be copied and pasted into their game[^12]. This seemed also unsatisfactory as the documents were disconnected in a google drive document with no navigation to link between the game or between resources. It was not clear at this point how best to signpost how the code listed fit within the existing structure.
 
-Instead I began to create code snippets which shared the structure of starter game template and added only the code needed for the additional requested functionality. .
+To help students see the code in the correct structure, I began to create code snippets within code playgrounds and distinct project. These projects shared the structure of starter game template and added only the code needed for the additional requested functionality.
+
+A GAP HERE
 
 My rationale was that each pattern added builds familiarity with the code structure. feedback from P1 and video evidence as in Toby's proficiency supports this observation.
 
@@ -1288,6 +1295,8 @@ In retrospect, I noted that this categorisation aligns with the MDA framework wh
 
 The section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
 
+CREATE A BETTER LINK HERE TO MARK TRANSITION.
+
 
 <!--
 My journal notes see an evolution of attempts to try to build into the program, activities which help build the participants sense of their own identities of game makers or more generally digital designers. In and early tentative attempt to define in broad strokes the types of game maker behaviour and underlying goals. In doing this I have taken inspiration from Bartle's game player types Hamari and Tuunanen, 2014). I translated player types to maker types based on notes in my observation journal and extracts from screen capture data. The following list of *Game Maker *types:
@@ -1303,7 +1312,7 @@ An additional rationale for this process was to help reduce potential internal b
 ## Chapter Discussion
 
 
-### Discussion on Authenticity of Tools and Resources
+### Discussion on Authenticity of Tools and Resources - SHIFT OR REVISE SOMEHOW TO REALLY REDUCE IMPACT? TO METHODS AGAIN?
 
 This chapter has exposed the tensions that developed in the activity systems and subsequent evolution the tools used. The term tools here is used broadly in line with AT's definition to include code authoring environment, supporting resources of printed and digital format, etc. This section begins to explore the value and implications of my choice to privilege authenticity of tool choice in this design.
 
@@ -1336,10 +1345,12 @@ Existing research on computing projects in the work of Papert [-@papert_mindstor
 
 #### Analysing the use of code playground and templated approach through the lens of authenticity
 
+REFRAME ANALYSIS VIA HCI / AFFORDENCES / HEURISTICS? SIGNPOST AS A MID LEVEL PEDAGOGY POTENTIALY REPLICABLE
+
 The process of creating a starting template in a coding environment that had been selected to remove common barriers to coding aligns with the motivations and techniques of Microworlds and broader constructionist design principles explored in the Literature review [@resnick_design_2005]. In scratch, the ability to reduce syntax errors through block coding was adopted.  [@resnick_reflections_2005]. In my design, I mirrored the goal of simplifying the creative process by implementing the following steps: creating the template, pulling up relevant variables to the fore, creating a grid to allow easy level design, and simplifying the syntax and the structure of the game code. In Papert's Mathland Microworld where the turtle speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation and the embedded concepts of algebra are experienced by children directly rather than through instruction. A similar process happens in this design. The map of learning dimensions outlined above details some of embedded concepts brought to the fore for students to bump against in their play and experimentation. An additional set of embedded concepts are GDPs which are explore in more details in chapter five.
 
 
-#### Linking authenticity and agency
+#### Linking authenticity and agency - SHIFT TO CHAPTER 6 OR 7
 
 These design decisions create a kind of border between the participants experience and the open ecology of learning to code in the wild. One built as a shield area within a more genuine ecology of authentic tool use and practices.
 
@@ -1475,6 +1486,10 @@ NOTE - also return to this table
 https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/edit
 or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
+
+
+NOTE - PERHAPS INCLUDE ELEMENT OF AUTHENTICITY HERE AND SIGNPOST TO FUTURE WORK? 
+
 
 
 <!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
