more on authenticity

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1363,6 +1363,16 @@ As outlined above, to avoid the barriers experienced when searching authentic, d
 An illustrative design tension emerged surrounding which kind of documentation to prioritise. After initially  steering participants directly to code snippets, I subsequently directed them instead to step by step tutorials which also included a link to the code snippets. In retrospect, my interpretation is that I prioritised the traditional form of instruction over more authentic, bricolage-like (see LR) developer practices. I propose it would be best to rectify this value judgement, in future iterations of the design giving each equal weight.  
 
 
+The previous section can be viewed from perspective of designing coding tools to increase instrumental agency thought removing barriers.
+
+The process of using more authentic toolsets has the potential to increase authorial agency. In the example below, greater diversity of tools set
+
+Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions. Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help.
+
+While the use of authentic tools and processes, while challenging for novices, can be facilitated by careful alignment of key design principles and other pedagogies.
+
+Later, chapter six  chapter explores the potential for drama processes to address learner anxiety in this domain.
+
 ### Summary of barriers and tensions explored in this chapter
 
 The following summary table lists barriers and tensions drawn from the literature review that were significant when reviewing my journal observations, feedback from participants and video data.
@@ -1391,14 +1401,7 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 or this one
 https://docs.google.com/document/d/18HrRPPx0-fj3PXVJTAf2dzYNTBSYGikpV_U0hu46r2c/edit
 
-
 NOTE - PERHAPS INCLUDE ELEMENT OF AUTHENTICITY HERE AND SIGNPOST TO FUTURE WORK?
-
-
-
-<!-- Cathy raised an issue of why if tensions are already explored elsewhere in the literature is it relevant to surface them here.
-After a discussion, a resolution to this issue in the thesis is to describe the value of approaching research with an open remit to see what tensions come into focus in a particular setting. Then to refocus research to explore these emerging issues in more depth.  -->
-
 
 
 
@@ -1406,11 +1409,15 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software.
 
-Retrospective analysis of my design naive approach exposes parallels with the HCI literature, constructionist principles and research on learning programming syntax. DEVELOP
+<!-- Retrospective analysis of my design naive approach exposes parallels with the HCI literature, constructionist principles and research on learning programming syntax. DEVELOP
 
-Resnick's design principles are focused on the affordances of tool for creative experimentation and expression via media authoring.
+Resnick's design principles are focused on the affordances of tool for creative experimentation and expression via media authoring. -->
 
-MOVED - SO MERGE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges. Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers. Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
+MOVED - SO MERGE - As explored in the literature review, there is a wide gap between instruction based tutorials and unguided project challenges.
+
+Even with the process driven scaffolding that a working knowledge of PBL approaches provides, the domain specific knowledge and practices can be a significant challenge for teachers.
+
+Thus project work which can place a high demand on the project facilitator/s. This chapter charts the evolution of tools and resources which occupy this middle ground between instruction and free choice creative approaches. Following chapters explore the impact and resulting pedagogies in more depth.
 
 The emphasis is on tools that can remove barriers to personal expression, rather than on pedagogic processes than can help teachers facilitate guided production. Viewed from a lens of situated, community driven production, there is a potential critique that these processes are under-explored in the school of constructionism.
 
