--- a/_posts/thesis_chapters/2023-12-5-Gdps.md
+++ b/_posts/thesis_chapters/2023-12-5-Gdps.md
@@ -138,7 +138,7 @@ https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/
 
 In the introduction, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge. While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope. For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application.
 
-This chapter centres on the exploration of the implementation of game design patterns (GDPs) as a key objective of in a way which correlates with the mid-level activity described in the last chapter. The same concept can be expressed using AT terminoligy as the use of GDPs as a unit of analysis or germ-cell of activity, two similar concepts with slightly different foci.
+This chapter centres on the exploration of the implementation of game design patterns (GDPs) as a key objective of in a way which correlates with the mid-level activity described in the last chapter. The same concept can be expressed using AT terminology as the use of GDPs as a unit of analysis or germ-cell of activity, two similar concepts with slightly different foci.
 
 <!-- Mid-level construct of design / patterns heuristics [] -->
 
@@ -148,8 +148,9 @@ This chapter centres on the exploration of the implementation of game design pat
 As a designer / researcher and practitioner both aspects are relevant and are explored separately in the following two sections.
 
 IS THIS NEEDED HERE? OR REDO THIS.
-It is thus potentially helpful to undertake a deeper analysis of the design patterns and specifically game design patterns at this point.  Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
+**It is thus potentially helpful to undertake a deeper analysis of the design patterns** and specifically game design patterns at this point.  Recap on the value of design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS)
 How design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006].
+
 
 #### On GDPs as a concept to help analysis
 
@@ -168,7 +169,11 @@ In addition, the process of seeking and defining a key area for analysis helps d
 
 <!-- NOTE - removed -  what is the germ cell of the overall game making activity. -->
 
-The theoretical framework invites discussion on the use of GDPs as a development tool to serve the advance game making community.
+GDPs emerged as a unit of analysis through their initial observation of GDPs as a germ-cell being used at different phases / scope of the learning design as it evolved.
+
+Chapter four charted the evolution of the use of GDPs in the learning design from participant led brainstorming of desired features, to self-contained tutorials and code snippets. This then was enriched by wider framework from academia, professional community and and the work of educational Game Jams to form a themed framework of GDPs around, game mechanics, game space, game polish and game challenges.
+
+The theoretical framework encourages discussion on the use of GDPs as a development tool to serve the advance game making community.
 
 The core concept of altering a game at the level of gameplay design pattern which emerged from experimental pilot process is adapted by participants and used in various forms of activity.
 
